# Rust-Brain

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HERMES.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
benches/: planner_stress.rs  rbmem_vs_markdown.rs
docs/: ARCHITECTURE.md  CODE_REVIEW_v1.4.1.md  HERMES_SELF_EVOLUTION.md  IMPLEMENTATION_PLAN.md  RELEASE_NOTES_1.4.0.md
examples/: .rbmempacks  from_md.aif  from_md.rbmem  hermes-self-evolution.rbmem  my-agent-memory.aif  my-agent-memory.rbmem  sample.aif  sample.md  sample.rbmem  sat-planning.rbmem
mcp-server/: .coverage  CHANGELOG.md  LICENSE  README.md  pyproject.toml
mcp-server/configs/: unsloth_RBForge_sft_rl.yaml
mcp-server/docs/: AGENT_SETUP.md  AGENT_SETUP.rbmem  HOWTO.md  RELEASE_NOTES_1.0.0.md
mcp-server/examples/: debugger_eval_cases.json  debugger_rl_trace.json  forge_thread_tool.py  rbmem_tools_schema.rbmem  starter_harness.py  trajectory_invention_loop.json
mcp-server/graphify-out/: .graphify_manifest.json  GRAPH_REPORT.md  graph.json
mcp-server/graphify-out/wiki/: community_0.md  community_1.md  community_10.md  community_11.md  community_12.md  community_13.md  community_14.md  community_15.md  community_16.md  community_17.md  community_18.md  community_19.md  community_2.md  community_20.md  community_21.md  community_22.md  community_23.md  community_3.md  community_4.md  community_5.md  community_6.md  community_7.md  community_8.md  community_9.md  index.md  scripts_demo_invention_loop_py.md  scripts_install_hermes_bridge_py.md  scripts_install_hermes_bridge_py_update_rbmem.md  scripts_install_hermes_bridge_py_update_wsl_config.md  src_rbforge_core_forge_py.md  src_rbforge_core_harness_py.md  src_rbforge_core_harness_py_toolharness.md  src_rbforge_core_models_py.md  src_rbforge_core_rbmem_py.md  src_rbforge_core_rbmem_py_rbmemstore.md  src_rbforge_core_rbmem_py_rbmemstore_apply_graph.md  src_rbforge_core_rbmem_py_rbmemstore_ensure.md  src_rbforge_core_rbmem_py_rbmemstore_persist_candidate.md  src_rbforge_core_rbmem_py_rbmemstore_register_validated_tool.md  src_rbforge_core_rbmem_py_rbmemstore_run.md  (+22 more)
mcp-server/scripts/: demo_before_after.py  demo_invention_loop.py  install_hermes_bridge.py  mcp_server.py
mcp-server/src/RBForge/: __init__.py
mcp-server/src/rbforge_core/: __init__.py  ab_tester.py  cli.py  compactor.py  crossfile.py  debugger.py  demo.py  dependency_resolver.py  doctor.py  eval.py  forge.py  guard.py  harness.py  health.py  improver.py  marketplace.py  mcp_server.py  models.py  rbmem.py  rbmem_client.py  registry.py  review.py  runner.py  sandbox.py  telemetry.py  temporal.py  trajectory.py  validation.py  version.py  versioning.py
mcp-server/src/rbforge_core/runners/: __init__.py  deno_runner.py  python_runner.py  wasm_runner.py
mcp-server/src/rbforge_mcp/: __init__.py  server.py
mcp-server/tests/: test_compactor.py  test_cross_project_compatibility.py  test_crossfile.py  test_debugger.py  test_doctor.py  test_eval.py  test_guard.py  test_harness_phase2.py  test_health.py  test_p3_integrations.py  test_phase2_core.py  test_rbforge_public_api.py  test_rbmem_graph_patch.py  test_review.py  test_temporal.py  test_validation_and_sandbox.py  test_versioning.py
src/: commands.rs  crypto.rs  diff.rs  document.rs  export.rs  hermes.rs  index.rs  lib.rs  main.rs  markdown.rs  pack.rs  parser.rs  sync.rs  version.rs
src/planner/: mod.rs
src/server/: mod.rs
tests/: aif_cli.rs  parser_regression.rs  rbmem_api.rs  rbmem_cli.rs  rbmem_concurrent.rs  rbmem_diff_merge.rs  rbmem_encryption.rs  rbmem_encryption_edge_cases.rs  rbmem_export.rs  rbmem_index.rs  rbmem_planner.rs  rbmem_server.rs
