[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "RBForge"
version = "1.0.0"
description = "Runtime tool forging, validation, and RBMEM persistence for Hermes agents."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Gestalt Labs" }]
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = ["jsonschema>=4.21", "packaging>=24.0", "PyYAML>=6.0", "structlog>=24.1"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.8", "jsonschema>=4.21"]
wasm = ["wasmtime>=19.0"]
mcp = ["mcp>=1.0"]
marketplace = ["cryptography>=42.0"]

[project.scripts]
rbforge = "rbforge_core.cli:main"
rbforge-demo = "rbforge_core.demo:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = false

[tool.coverage.run]
source = ["src"]
omit = [
    "src/rbforge_core/mcp_server.py",
    "src/rbforge_mcp/*",
]

[tool.coverage.report]
fail_under = 0
show_missing = true
